# catalyst

./: .gitignore  Cargo.toml  index.html  manifest.json  readme.md  script.js  style.css
catalyst/: Cargo.toml
catalyst/src/: main.rs
inkwell/: README_inkwell.md  debugger.html  inkwell.html
src/: main.rs
wasm-logic/: Cargo.toml
wasm-logic/src/: lib.rs
wasm-logic/xtask/: Cargo.toml
wasm-logic/xtask/src/: main.rs
