[package]
name = "catalyst"
version = "0.1.0"
edition = "2021"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
ring = "0.16.20"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parity-scale-codec = "3.4.0"
parity-scale-codec-derive = "3.1.4"
rand = "0.8.5"
include-repo = "1.0.0"
