[package]
name = "catalyst"
version = "0.1.0"
edition = "2021"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
ring = "0.16.20"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
lazy_static = "1.4.0"
catalyst-wasm-logic = { version = "*", path = "../wasm-logic", features = ["native"]}
tokio = "1.26.0"