[package]
name = "catalyst-wasm-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.16.20"
base64 = "0.21.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wee_alloc = "0.4"
wasm-peers = "0.4.1"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Crypto",
  "SubtleCrypto",
  "Document",
  "Location"
]

[dependencies.cozo]
version = "0.5.1"
default-features = false

[features]
default = ["native"]
native = ["cozo/storage-rocksdb", "cozo/default"]
wasm = ["cozo/wasm"]


[lib]
crate-type = ["cdylib", "rlib"]