[package]
name = "catalyst-wasm-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wee_alloc = "0.4"
ed25519-dalek = "2.0.0-rc.2"
rand_chacha = { version = "0.3.1", default-features = false }
getrandom = { version = "0.2.8", features = ["js"] }
lazy_static = "1.4.0"


[dependencies.web-sys]
version = "0.3.61"
features = [
  "Crypto",
  "SubtleCrypto",
  "Document",
  "Location",
  "Window"
]

[dependencies.cozo]
version = "0.5.1"
default-features = false

[features]
default = ["native"]
native = ["cozo/storage-rocksdb", "cozo/default",]
wasm = ["cozo/wasm",]


[lib]
crate-type = ["cdylib", "rlib"]